# callis

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  supervisord.conf
.github/: copilot-instructions.md
.github/workflows/: bandit.yml  codacy.yml  codeql.yml  ethicalcheck.yml  release.yml
api/: Dockerfile  core.py  dependencies.py  main.py  models.py  pyproject.toml
api/middleware/: __init__.py  security_headers.py  session.py  setup_guard.py  totp_guard.py
api/routers/: audit.py  auth.py  hosts.py  internal.py  settings.py  setup.py  users.py
api/static/: app.js  callis.sh  style.css  theme.js
api/templates/: 500.html  audit.html  base.html  dashboard.html  generated_key_page.html  hosts.html  login.html  settings.html  setup.html  setup_totp.html  totp_setup.html  user_detail.html  users.html
api/templates/partials/: audit_rows.html  generated_key.html  host_row.html  key_list.html  ssh_config.html  user_row.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  REQUIREMENTS.md  SECURITY.md
fail2ban/: jail.local
fail2ban/filter.d/: sshd.conf
scripts/: callis.sh
sshd/: Dockerfile  auth-keys.sh  banner.txt  callis-cmd.sh  entrypoint.sh  sshd_config
