[project]
name = "callis"
version = "0.2.0"
description = "SSH bastion host with web management UI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0,<3.1.7",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
